[gd_scene load_steps=4 format=3 uid="uid://c3ifr4bjdss33"]

[ext_resource type="Script" uid="uid://c27udoenuolx8" path="res://core/crafting/crafting_manager.gd" id="1_nsgh0"]
[ext_resource type="PackedScene" uid="uid://hws6k70f7tw" path="res://core/crafting/inventory_slot.tscn" id="2_52qb3"]
[ext_resource type="Script" uid="uid://cvgg64bng4qvu" path="res://core/crafting/inventory_manager.gd" id="2_nsgh0"]

[node name="CraftingUI" type="Node2D"]
script = ExtResource("1_nsgh0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Inventory" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(0.7483685, 0.7483685)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("2_nsgh0")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Inventory"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15

[node name="InventoryRow1" type="HBoxContainer" parent="CanvasLayer/Inventory/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="InventorySlot1" parent="CanvasLayer/Inventory/MarginContainer/InventoryRow1" instance=ExtResource("2_52qb3")]
layout_mode = 2

[node name="InventorySlot2" parent="CanvasLayer/Inventory/MarginContainer/InventoryRow1" instance=ExtResource("2_52qb3")]
layout_mode = 2

[node name="InventorySlot3" parent="CanvasLayer/Inventory/MarginContainer/InventoryRow1" instance=ExtResource("2_52qb3")]
layout_mode = 2

[node name="InventorySlot4" parent="CanvasLayer/Inventory/MarginContainer/InventoryRow1" instance=ExtResource("2_52qb3")]
layout_mode = 2

[node name="InventorySlot5" parent="CanvasLayer/Inventory/MarginContainer/InventoryRow1" instance=ExtResource("2_52qb3")]
layout_mode = 2

[node name="InventorySlot6" parent="CanvasLayer/Inventory/MarginContainer/InventoryRow1" instance=ExtResource("2_52qb3")]
layout_mode = 2

[node name="Debug" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Debug"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_top = 11

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Debug/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/Debug/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Add Item"

[node name="Button2" type="Button" parent="CanvasLayer/Debug/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sub Item"

[connection signal="pressed" from="CanvasLayer/Debug/MarginContainer/VBoxContainer/Button" to="CanvasLayer/Inventory" method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Debug/MarginContainer/VBoxContainer/Button2" to="CanvasLayer/Inventory" method="_on_button_2_pressed"]
